<resources>
    <string name="app_name">Logistica Telcos</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="cancelar">Salir</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="telcos">Telcos Ingenieria S.A.</string>
    <string name="aceptar">Aceptar</string>
    <string name="cerrarsesion">Cerrar sesion</string>
    <string name="limpiarformu">Limpiar formulario</string>
    <string name="title_activity_menu">Logistica</string>
    <string name="ingresa_inventario">Ingresa el inventario</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="numero_de_inventario">Numero de Inventario</string>
    <string name="consultar">Consultar</string>
    <string name="estado_material">Estado Material</string>
    <string name="bodega">Bodega</string>
    <string name="digitar_inventario">Digitar inventario</string>
    <string name="codigo">Codigo</string>
    <string name="descripcion_de_material">Descripcion de material</string>
    <string name="cantidad_material">Cantidad</string>
    <string name="buscar">Buscar</string>
    <string name="informacion_personal">Informacion personal</string>
    <string name="actualizar">Actualizar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="digitacion_de_materiales">Digitacion de materiales</string>
    <string name="serial">Serial</string>
    <string name="mas">+</string>
    <string name="guardar_digitacion">Guardar digitación</string>
    <string name="cancelar_digitacion">Cancelar digitación</string>
    <string name="cerrar">Cerrar</string>
</resources>
