<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuInventarioFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_inventario"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:id="@+id/LayCodInvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="70dp">

        <EditText
            android:id="@+id/editTextCodigoInv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/numero_de_inventario"
            android:inputType="number"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonConsultInve"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#201F49"
            android:text="@string/consultar"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayEstadoMat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="131dp">

        <TextView
            android:id="@+id/textEstado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="5"
            android:text="@string/estado_material"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerEstadoMat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:drawable/spinner_dropdown_background" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayBodega"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textBodega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bodega"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerBodega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/spinner_dropdown_background" />
    </LinearLayout>

</LinearLayout>